tests/reference/asr-test_max-b2108fe.stderr
semantic error: Arguments do not match for any generic procedure
  --> tests/../integration_tests/test_max.py:10:12
   |
10 |     assert max(a ) == a
   |            ^^^^^^^ 
